--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.1",
-    "typescript": "^5.1.6"
+    "mongoose": "^7.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.5",
     "concurrently": "^8.2.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "typescript": "^5.1.6"
   }
 }
